RESOLVED FIXED107715
[WK2] REGRESSION(r139514): didFailToSendSyncMessage is not called by Connection
https://bugs.webkit.org/show_bug.cgi?id=107715
Summary [WK2] REGRESSION(r139514): didFailToSendSyncMessage is not called by Connection
Alexey Proskuryakov
Reported 2013-01-23 12:00:53 PST
Misapplied edit. <rdar://problem/13064414>
Attachments
proposed fix (2.68 KB, patch)
2013-01-23 13:21 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2013-01-23 13:21:29 PST
Created attachment 184296 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-01-23 13:36:03 PST
Note You need to log in before you can comment on or make changes to this bug.