        <rdar://problem/13064414> REGRESSION(r139514): didFailToSendSyncMessage is not called by Connection         https://bugs.webkit.org/show_bug.cgi?id=107715

Reviewed by Anders Carlsson.

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::sendSyncMessage):
        (CoreIPC::Connection::sendSyncMessageFromSecondaryThread):
        Correcting a misapplied edit - didFailToSendSyncMessage should be kept in main
        thread message sending, not in secondary thread.



Canonical link: https://commits.webkit.org/125918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140582 268f45cc-cd09-0410-ab3c-d52691b4dbfc